--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						I’m passionate about building systems that can learn from their environment and applying AI to areas like <strong>robotics</strong>, <strong>computer vision</strong>, and <strong>reinforcement learning</strong>.<br />
 						<a href="#main" class="scrolly">Explore my work and journey</a>.</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Discover</a></li>
 						</ul>
 					</div>
 
@@ -59,7 +59,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">About me</a></li>
 							<li><a href="generic.html">Projects</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="elements.html">More</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -75,14 +75,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#">About me</h2>
+									<p>I’m a developer passionate about <strong>Artificial Intelligence</strong>, with a solid programming background and a mindset focused on continuous learning.<br />
+									My experience includes <strong>Python</strong> and <strong>Java</strong>, and I’m currently building personal projects to apply concepts from <strong>Machine Learning</strong> and explore how AI can integrate with robotics.<br />
+									My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/pic01.jpg" alt="AI robotics concept" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
@@ -92,15 +90,15 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="#">Currently Working On</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
+									<p>
+										🔹 Exploring the fundamentals of <strong>Reinforcement Learning</strong>.<br />
+										🔹 Developing personal projects with <strong>Python</strong> using libraries such as TensorFlow and OpenCV.<br />
+										🔹 Learning about <strong>robotics</strong> and <strong>computer vision</strong> to combine them with AI.<br />
+										🔹 Preparing for advanced certifications in <strong>Azure AI</strong> and applied AI development.
+									</p>
 								</article>
 								<article>
 									<header>
@@ -457,3 +455,4 @@
 	</body>
 
 </html>
+
