--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mi Página</title>
+		<title>Daniel Fernández — AI Developer & Research Enthusiast</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -9,36 +9,34 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 
 			<!-- Intro -->
 			<div id="intro">
-				<h1>Bienvenido a<br />Mi Página</h1>
-				<p>Este es un ejemplo adaptado del template Massively.<br />
-				Puedes personalizar tu contenido y mantener las animaciones y el scroll.</p>
+				<h1>Daniel Fernández</h1>
+				<p>Developer with a strong foundation in <strong>Python</strong> and <strong>Java</strong>, currently specializing in <strong>Artificial Intelligence</strong>.<br />
+				I’m passionate about building systems that can learn from their environment and applying AI to areas like <strong>robotics</strong>, <strong>computer vision</strong>, and <strong>reinforcement learning</strong>.<br />
+				<a href="#main" class="scrolly">Explore my work and journey</a>.</p>
 				<ul class="actions">
-					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+					<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Discover</a></li>
 				</ul>
 			</div>
 
 			<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="logo">Mi Página</a>
+				<a href="index.html" class="logo">Daniel Fernández</a>
 			</header>
 
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
-					<li class="active"><a href="index.html">Inicio</a></li>
-					<li><a href="generic.html">Página Genérica</a></li>
-					<li><a href="elements.html">Elementos</a></li>
+					<li class="active"><a href="index.html">About Me</a></li>
+					<li><a href="generic.html">Projects</a></li>
+					<li><a href="elements.html">More</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/yourprofile" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 
@@ -48,40 +46,35 @@
 				<!-- Featured Post -->
 				<article class="post featured">
 					<header class="major">
-						<span class="date">October 16, 2025</span>
-						<h2><a href="#">Mi Proyecto Destacado</a></h2>
-						<p>Descripción breve de mi proyecto destacado. Puedes personalizar este texto y mantener el diseño original.</p>
+						<h2><a href="#">About Me</a></h2>
+						<p>I’m a developer passionate about <strong>Artificial Intelligence</strong>, with a solid programming background and a mindset focused on continuous learning.<br />
+						My experience includes <strong>Python</strong> and <strong>Java</strong>, and I’m currently building personal projects to apply concepts from <strong>Machine Learning</strong> and explore how AI can integrate with robotics.<br />
+						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.</p>
 					</header>
-					<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-					<ul class="actions special">
-						<li><a href="#" class="button large">Ver Proyecto</a></li>
-					</ul>
+					<a href="#" class="image main"><img src="images/pic01.jpg" alt="AI or robotics concept" /></a>
 				</article>
 
 				<!-- Posts -->
 				<section class="posts">
 					<article>
 						<header>
-							<span class="date">October 15, 2025</span>
-							<h2><a href="#">Otro Proyecto</a></h2>
+							<h2><a href="#">Currently Working On</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-						<p>Descripción breve de este proyecto. Mantén las clases y estructura para que el CSS funcione correctamente.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Ver Proyecto</a></li>
-						</ul>
+						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Reinforcement Learning" /></a>
+						<p>
+							🔹 Exploring the fundamentals of <strong>Reinforcement Learning</strong>.<br />
+							🔹 Developing personal projects with <strong>Python</strong> using libraries such as TensorFlow and OpenCV.<br />
+							🔹 Learning about <strong>robotics</strong> and <strong>computer vision</strong> to combine them with AI.<br />
+							🔹 Preparing for advanced certifications in <strong>Azure AI</strong> and applied AI development.
+						</p>
 					</article>
 
 					<article>
 						<header>
-							<span class="date">October 14, 2025</span>
-							<h2><a href="#">Proyecto Adicional</a></h2>
+							<h2><a href="#">Pecebot — A Virtual Assistant with Personality</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-						<p>Otro ejemplo de proyecto. Mantener la estructura es clave para que las animaciones funcionen.</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">Ver Proyecto</a></li>
-						</ul>
+						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Virtual assistant AI project" /></a>
+						<p>Personal project exploring how language models can give a <strong>unique personality and adaptive behavior</strong> to a virtual assistant. Built in Python, this project combines conversational logic with experiments in emotional and contextual responses.</p>
 					</article>
 				</section>
 
@@ -90,55 +83,32 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<section>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field">
-								<label for="name">Nombre</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field">
-								<label for="email">Email</label>
-								<input type="text" name="email" id="email" />
-							</div>
-							<div class="field">
-								<label for="message">Mensaje</label>
-								<textarea name="message" id="message" rows="3"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Enviar" /></li>
-						</ul>
-					</form>
+					<h3>Get in Touch</h3>
+					<p>Interested in collaborating or discussing AI? I’m open to new opportunities, projects, and meaningful conversations about technology and innovation.</p>
+					<ul class="actions">
+						<li><a href="mailto:yourmail@example.com" class="button">Send me a message</a></li>
+					</ul>
 				</section>
 
 				<section class="split contact">
-					<section class="alt">
-						<h3>Dirección</h3>
-						<p>1234 Calle Ejemplo #87257<br />Ciudad, País 00000</p>
-					</section>
-					<section>
-						<h3>Teléfono</h3>
-						<p><a href="#">(000) 000-0000</a></p>
-					</section>
 					<section>
 						<h3>Email</h3>
-						<p><a href="#">info@miweb.com</a></p>
+						<p><a href="mailto:yourmail@example.com">yourmail@example.com</a></p>
 					</section>
 					<section>
-						<h3>Redes</h3>
-						<ul class="icons alt">
-							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+						<h3>GitHub</h3>
+						<p><a href="https://github.com/yourusername">github.com/yourusername</a></p>
+					</section>
+					<section>
+						<h3>LinkedIn</h3>
+						<p><a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
 					</section>
 				</section>
 			</footer>
 
 			<!-- Copyright -->
 			<div id="copyright">
-				<ul><li>&copy; 2025 Mi Página</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+				<ul><li>&copy; Daniel Fernández</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 			</div>
 
 		</div>
