--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<article class="post featured">
 					<header class="major">
 						<h2><a href="#">About Me</a></h2>
-						<p>I’m a developer passionate about <strong>Artificial Intelligence</strong>, with a solid programming background and a mindset focused on continuous learning.<br />
+						<p>I’m a developer passionate about <strong>Artificial Intelligence</strong>, with a solid programming and math background and a mindset focused on continuous learning.<br />
 						My experience includes <strong>Python</strong> and <strong>Java</strong>, and I’m currently building personal projects to apply concepts from <strong>Machine Learning</strong> and explore how AI can integrate with robotics.<br />
 						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.</p>
 					</header>
@@ -124,3 +124,4 @@
 
 	</body>
 </html>
+
