--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<li><a href="elements.html">More</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/yourprofile" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/Dranter" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 
@@ -124,4 +124,5 @@
 
 	</body>
 </html>
+
 
