--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<section>
+					<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
 					<h3>Get in Touch</h3>
 					<p>Interested in collaborating or discussing AI? I’m open to new opportunities, projects, and meaningful conversations about technology and innovation.</p>
 					<ul class="actions">
@@ -124,6 +139,7 @@
 
 	</body>
 </html>
+
 
 
 
