--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 					<ul class="actions">
 						<li><a href="mailto:yourmail@example.com" class="button">Send me a message</a></li>
 					</ul>
+					</form>
 				</section>
 
 				<section class="split contact">
@@ -139,6 +140,7 @@
 
 	</body>
 </html>
+
 
 
 
