--- a/index.html
+++ b/index.html
@@ -83,44 +83,45 @@
 			<!-- Footer -->
 			<footer id="footer">
 				<section>
-					<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
 					<h3>Get in Touch</h3>
 					<p>Interested in collaborating or discussing AI? I’m open to new opportunities, projects, and meaningful conversations about technology and innovation.</p>
-					<ul class="actions">
-						<li><a href="mailto:yourmail@example.com" class="button">Send me a message</a></li>
-					</ul>
-					</form>
-				</section>
+		
+			<form method="post" action="#">
+				<div class="fields">
+					<div class="field">
+						<label for="name">Name</label>
+						<input type="text" name="name" id="name" />
+					</div>
+					<div class="field">
+						<label for="email">Email</label>
+						<input type="text" name="email" id="email" />
+					</div>
+					<div class="field">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" rows="3"></textarea>
+					</div>
+				</div>
+				<ul class="actions">
+					<li><input type="submit" value="Send Message" class="primary" /></li>
+				</ul>
+			</form>
+		</section>
 
-				<section class="split contact">
-					<section>
-						<h3>Email</h3>
-						<p><a href="mailto:yourmail@example.com">danielfernandezpi@hotmail.com</a></p>
-					</section>
-					<section>
-						<h3>GitHub</h3>
-						<p><a href="https://github.com/yourusername">github.com/Dranter</a></p>
-					</section>
-					<section>
-						<h3>LinkedIn</h3>
-						<p><a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/danij-fernandez</a></p>
-					</section>
-				</section>
-			</footer>
+	<section class="split contact">
+		<section>
+			<h3>Email</h3>
+			<p><a href="mailto:danielfernandezpi@hotmail.com">danielfernandezpi@hotmail.com</a></p>
+		</section>
+		<section>
+			<h3>GitHub</h3>
+			<p><a href="https://github.com/Dranter">github.com/Dranter</a></p>
+		</section>
+		<section>
+			<h3>LinkedIn</h3>
+			<p><a href="https://www.linkedin.com/in/danij-fernandez">linkedin.com/in/danij-fernandez</a></p>
+		</section>
+	</section>
+</footer>
 
 			<!-- Copyright -->
 			<div id="copyright">
@@ -140,6 +141,7 @@
 
 	</body>
 </html>
+
 
 
 
