--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
 					<h3>Get in Touch</h3>
 					<p>Interested in collaborating or discussing AI? I’m open to new opportunities, projects, and meaningful conversations about technology and innovation.</p>
 		
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field">
-								<label for="name">Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field">
-								<label for="email">Email</label>
-								<input type="text" name="email" id="email" />
-							</div>
-							<div class="field">
-								<label for="message">Message</label>
-								<textarea name="message" id="message" rows="3"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
-						</ul>
-					</form>
+					<form action="https://formspree.io/f/mabcdxyz" method="POST">
+					    <div class="fields">
+					        <div class="field">
+					            <label for="name">Name</label>
+					            <input type="text" name="name" id="name" required />
+					        </div>
+					        <div class="field">
+					            <label for="email">Email</label>
+					            <input type="email" name="email" id="email" required />
+					        </div>
+					        <div class="field">
+					            <label for="message">Message</label>
+					            <textarea name="message" id="message" rows="3" required></textarea>
+					        </div>
+					    </div>
+					    <ul class="actions">
+					        <li><input type="submit" value="Send Message" class="primary" /></li>
+					    </ul>
+				</form>
 				</section>
 
 	<section class="split contact">
@@ -141,6 +141,7 @@
 
 	</body>
 </html>
+
 
 
 
