--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 					            <textarea name="message" id="message" rows="3" required></textarea>
 					        </div>
 					    </div>
+
+						<!-- Campos ocultos -->
+						<input type="hidden" name="_subject" value="New message from your portfolio website!" />
+						<!--<input type="hidden" name="_next" value="https://dranter.github.io/thanks.html" />-->
+						
 					    <ul class="actions">
 					        <li><input type="submit" value="Send Message" class="primary" /></li>
 					    </ul>
@@ -141,6 +146,7 @@
 
 	</body>
 </html>
+
 
 
 
