--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<h3>Get in Touch</h3>
 					<p>Interested in collaborating or discussing AI? I’m open to new opportunities, projects, and meaningful conversations about technology and innovation.</p>
 		
-					<form action="https://formspree.io/f/mvgzljrq" method="POST">
+					<form action="https://formspree.io/f/mgvnrged" method="POST">
 					    <div class="fields">
 					        <div class="field">
 					            <label for="name">Name</label>
@@ -146,6 +146,7 @@
 
 	</body>
 </html>
+
 
 
 
