--- a/index.html
+++ b/index.html
@@ -143,9 +143,29 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-
+		<script>
+			const form = document.getElementById("contact-form");
+			const status = document.getElementById("form-status");
+			
+			form.addEventListener("submit", async (event) => {
+			  event.preventDefault();
+			  const data = new FormData(form);
+			  const response = await fetch(form.action, {
+			    method: form.method,
+			    body: data,
+			    headers: { 'Accept': 'application/json' }
+			  });
+			  if (response.ok) {
+			    status.textContent = "✅ Message sent successfully!";
+			    form.reset();
+			  } else {
+			    status.textContent = "❌ There was a problem sending your message.";
+			  }
+			});
+		</script>
 	</body>
 </html>
+
 
 
 
