--- a/generic.html
+++ b/generic.html
@@ -76,7 +76,17 @@
 							<li><a href="#" class="button">View on GitHub</a></li>
 						</ul>
 					</article>
-
+					<!-- Para añadir nuevos -->
+					<article>
+						<header>
+							<h2><a href="#">Project Title</a></h2>
+						</header>
+						<a href="#" class="image fit"><img src="images/picXX.jpg" alt="Project Image" /></a>
+						<p>Project description...</p>
+						<ul class="actions special">
+							<li><a href="https://github.com/yourusername/projectname" class="button">View on GitHub</a></li>
+						</ul>
+					</article>
 				</section>
 			</div>
 
@@ -166,3 +176,4 @@
 
 	</body>
 </html>
+
