--- a/generic.html
+++ b/generic.html
@@ -123,15 +123,15 @@
 				<section class="split contact">
 					<section>
 						<h3>Email</h3>
-						<p><a href="mailto:yourmail@example.com">yourmail@example.com</a></p>
+						<p><a href="mailto:yourmail@example.com">danielfernandezpi@hotmail.com</a></p>
 					</section>
 					<section>
 						<h3>GitHub</h3>
-						<p><a href="https://github.com/yourusername">github.com/yourusername</a></p>
+						<p><a href="https://github.com/yourusername">github.com/Dranter</a></p>
 					</section>
 					<section>
 						<h3>LinkedIn</h3>
-						<p><a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
+						<p><a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/danij-fernandez</a></p>
 					</section>
 				</section>
 			</footer>
@@ -176,4 +176,5 @@
 
 	</body>
 </html>
+
 
