--- a/generic.html
+++ b/generic.html
@@ -100,11 +100,11 @@
 					<!-- Contact Form (same as on index.html) -->
 					<form id="contact-form" action="https://formspree.io/f/mgvnrged" method="POST">
 						<div class="fields">
-							<div class="field half">
+							<div class="field">
 								<label for="name">Name</label>
 								<input type="text" name="name" id="name" required />
 							</div>
-							<div class="field half">
+							<div class="field">
 								<label for="email">Email</label>
 								<input type="email" name="email" id="email" required />
 							</div>
@@ -176,5 +176,6 @@
 
 	</body>
 </html>
+
 
 
