--- a/generic.html
+++ b/generic.html
@@ -45,14 +45,29 @@
 				<!-- Project Entries -->
 				<section class="posts">
 
-					<!-- Example Project 1 -->
+					<!-- Example Project 1 (Template for Future Projects) -->
 					<article>
 						<header>
-							<h2><a href="#">Pecebot — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="#">Calculator</a></h2>
+						</header>
+						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Placeholder Project" /></a>
+						<p>
+							Advanced calculator with all the needed functions you could need (sin, cos, sqrt, pi...). Has the posibility to change to hex, oct, bin, dec with the last one as default.
+							Built full in <strong>Python</strong> and with the GUI from the library <strong>CustomKinter</strong> with a several color interfaces. I learnt how to <strong>manage a project</strong>, build a calculator for my own use and <strong>start my journey as a developer</strong>.
+						</p>
+						<ul class="actions special">
+							<li><a href="#" class="button">View on GitHub</a></li>
+						</ul>
+					</article>
+					
+					<!-- Example Project 2 -->
+					<article>
+						<header>
+							<h2><a href="#">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Pecebot Project" /></a>
 						<p>
-							Pecebot is an experimental virtual assistant designed to explore how <strong>language models</strong> can express <strong>adaptive personalities</strong>.  
+							AI Fish is an experimental virtual assistant designed to explore how <strong>language models</strong> can express <strong>adaptive personalities</strong>.  
 							Built in <strong>Python</strong>, the project combines conversational logic with emotional responses and context awareness.  
 							I’m currently expanding it with reinforcement learning and dialogue memory.
 						</p>
@@ -61,32 +76,7 @@
 						</ul>
 					</article>
 
-					<!-- Example Project 2 (Template for Future Projects) -->
-					<article>
-						<header>
-							<h2><a href="#">Project Title Here</a></h2>
-						</header>
-						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Placeholder Project" /></a>
-						<p>
-							Short description of your project goes here.  
-							Explain what technologies you used, what problem it solves, and what you learned from building it.  
-							You can duplicate this block to add more projects as you grow your portfolio.
-						</p>
-						<ul class="actions special">
-							<li><a href="#" class="button">View on GitHub</a></li>
-						</ul>
-					</article>
-					<!-- Para añadir nuevos -->
-					<article>
-						<header>
-							<h2><a href="#">Project Title</a></h2>
-						</header>
-						<a href="#" class="image fit"><img src="images/picXX.jpg" alt="Project Image" /></a>
-						<p>Project description...</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/yourusername/projectname" class="button">View on GitHub</a></li>
-						</ul>
-					</article>
+					
 				</section>
 			</div>
 
@@ -176,6 +166,7 @@
 
 	</body>
 </html>
+
 
 
 
