--- a/generic.html
+++ b/generic.html
@@ -65,14 +65,14 @@
 						<header>
 							<h2><a href="#">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Pecebot Project" /></a>
+						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="AI Fish Project" /></a>
 						<p>
 							AI Fish is an experimental virtual assistant designed to explore how <strong>language models</strong> can express <strong>adaptive personalities</strong>.  
 							Built in <strong>Python</strong>, the project combines conversational logic with emotional responses and context awareness.  
 							I’m currently expanding it with reinforcement learning and dialogue memory.
 						</p>
 						<ul class="actions special">
-							<li><a href="https://github.com/yourusername/pecebot" class="button">View on GitHub</a></li>
+							<li><a href="https://github.com/Dranter/Projects/Calculator" class="button">View on GitHub</a></li>
 						</ul>
 					</article>
 
@@ -166,6 +166,7 @@
 
 	</body>
 </html>
+
 
 
 
