--- a/generic.html
+++ b/generic.html
@@ -50,13 +50,13 @@
 						<header>
 							<h2><a href="#">Calculator</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Placeholder Project" /></a>
+						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Calculator Project" /></a>
 						<p>
 							Advanced calculator with all the needed functions you could need (sin, cos, sqrt, pi...). Has the posibility to change to hex, oct, bin, dec with the last one as default.
 							Built full in <strong>Python</strong> and with the GUI from the library <strong>CustomKinter</strong> with a several color interfaces. I learnt how to <strong>manage a project</strong>, build a calculator for my own use and <strong>start my journey as a developer</strong>.
 						</p>
 						<ul class="actions special">
-							<li><a href="#" class="button">View on GitHub</a></li>
+							<li><a href="https://github.com/Dranter/Projects/Calculator" class="button">View on GitHub</a></li>
 						</ul>
 					</article>
 					
@@ -166,6 +166,7 @@
 
 	</body>
 </html>
+
 
 
 
