--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,7 @@
 				</ul>
 				<ul class="icons">
 					<li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/yourprofile" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 
@@ -56,7 +56,7 @@
 							Built full in <strong>Python</strong> and with the GUI from the library <strong>CustomKinter</strong> with a several color interfaces. I learnt how to <strong>manage a project</strong>, build a calculator for my own use and <strong>start my journey as a developer</strong>.
 						</p>
 						<ul class="actions special">
-							<li><a href="https://github.com/Dranter/Projects/Calculator" class="button">View on GitHub</a></li>
+							<li><a href="https://github.com/Dranter/Projects/Calculadora" class="button">View on GitHub</a></li>
 						</ul>
 					</article>
 					
@@ -72,7 +72,7 @@
 							I’m currently expanding it with reinforcement learning and dialogue memory.
 						</p>
 						<ul class="actions special">
-							<li><a href="https://github.com/Dranter/Projects/Calculator" class="button">View on GitHub</a></li>
+							<li><a href="https://github.com/Dranter/Projects" class="button">View on GitHub</a></li>
 						</ul>
 					</article>
 
@@ -113,15 +113,15 @@
 				<section class="split contact">
 					<section>
 						<h3>Email</h3>
-						<p><a href="mailto:yourmail@example.com">danielfernandezpi@hotmail.com</a></p>
+						<p><a href="mailto:danielfernandezpi@hotmail.com">danielfernandezpi@hotmail.com</a></p>
 					</section>
 					<section>
 						<h3>GitHub</h3>
-						<p><a href="https://github.com/yourusername">github.com/Dranter</a></p>
+						<p><a href="https://github.com/Dranter">github.com/Dranter</a></p>
 					</section>
 					<section>
 						<h3>LinkedIn</h3>
-						<p><a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/danij-fernandez</a></p>
+						<p><a href="https://www.linkedin.com/in/danij-fernandez">linkedin.com/in/danij-fernandez</a></p>
 					</section>
 				</section>
 			</footer>
@@ -166,6 +166,7 @@
 
 	</body>
 </html>
+
 
 
 
