--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<nav id="nav">
 				<ul class="links">
 					<li class="active"><a href="index.html">About Me</a></li>
-					<li><a href="generic.html">Projects</a></li>
+					<li><a href="projects.html">Projects</a></li>
 				</ul>
 				<ul class="icons">
 					<li><a href="https://github.com/Dranter" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -164,6 +164,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
