--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 					<article>
 						<header>
-							<h2><a href="#">Pecebot — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="#">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Virtual assistant AI project" /></a>
 						<p>Personal project exploring how language models can give a <strong>unique personality and adaptive behavior</strong> to a virtual assistant. Built in Python, this project combines conversational logic with experiments in emotional and contextual responses.</p>
@@ -164,6 +164,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
