--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<section class="posts">
 					<article>
 						<header>
-							<h2><a href="#">Currently Working On</a></h2>
+							<h2><a href="https://learn.microsoft.com/es-es/credentials/certifications/resources/study-guides/ai-102">Currently Working On</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Reinforcement Learning" /></a>
 						<p>
@@ -70,7 +70,7 @@
 
 					<article>
 						<header>
-							<h2><a href="#">AI Fish — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="https://github.com/Dranter">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Virtual assistant AI project" /></a>
 						<p>Personal project exploring how language models can give a <strong>unique personality and adaptive behavior</strong> to a virtual assistant. Built in Python, this project combines conversational logic with experiments in emotional and contextual responses.</p>
@@ -164,6 +164,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
