--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 					<li class="active"><a href="projects.html">Projects</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://github.com/yourusername" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/Dranter" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
@@ -47,7 +47,7 @@
 					<!-- Example Project 1 (Template for Future Projects) -->
 					<article>
 						<header>
-							<h2><a href="#">Calculator</a></h2>
+							<h2><a href="https://github.com/Dranter/Projects/tree/main/Calculadora">Calculator</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Calculator Project" /></a>
 						<p>
@@ -62,7 +62,7 @@
 					<!-- Example Project 2 -->
 					<article>
 						<header>
-							<h2><a href="#">AI Fish — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="https://github.com/Dranter">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="AI Fish Project" /></a>
 						<p>
@@ -165,6 +165,7 @@
 
 	</body>
 </html>
+
 
 
 
