--- a/projects.html
+++ b/projects.html
@@ -24,8 +24,8 @@
 					<li class="active"><a href="projects.html">Projects</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://github.com/Dranter" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/Dranter" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 
@@ -47,7 +47,7 @@
 					<!-- Example Project 1 (Template for Future Projects) -->
 					<article>
 						<header>
-							<h2><a href="https://github.com/Dranter/Projects/tree/main/Calculadora">Calculator</a></h2>
+							<h2><a href="https://github.com/Dranter/Projects/tree/main/Calculadora" target="_blank" rel="noopener noreferrer">Calculator</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Calculator Project" /></a>
 						<p>
@@ -55,14 +55,14 @@
 							Built full in <strong>Python</strong> and with the GUI from the library <strong>CustomKinter</strong> with a several color interfaces. I learnt how to <strong>manage a project</strong>, build a calculator for my own use and <strong>start my journey as a developer</strong>.
 						</p>
 						<ul class="actions special">
-							<li><a href="https://github.com/Dranter/Projects/tree/main/Calculadora" class="button">View on GitHub</a></li>
+							<li><a href="https://github.com/Dranter/Projects/tree/main/Calculadora" class="button" target="_blank" rel="noopener noreferrer">View on GitHub</a></li>
 						</ul>
 					</article>
 					
 					<!-- Example Project 2 -->
 					<article>
 						<header>
-							<h2><a href="https://github.com/Dranter">AI Fish — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="AI Fish Project" /></a>
 						<p>
@@ -71,7 +71,7 @@
 							I’m currently expanding it with reinforcement learning and dialogue memory.
 						</p>
 						<ul class="actions special">
-							<li><a href="https://github.com/Dranter/Projects" class="button">View on GitHub</a></li>
+							<li><a href="https://github.com/Dranter/Projects" class="button" target="_blank" rel="noopener noreferrer">View on GitHub</a></li>
 						</ul>
 					</article>
 
@@ -116,11 +116,11 @@
 					</section>
 					<section>
 						<h3>GitHub</h3>
-						<p><a href="https://github.com/Dranter">github.com/Dranter</a></p>
+						<p><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">github.com/Dranter</a></p>
 					</section>
 					<section>
 						<h3>LinkedIn</h3>
-						<p><a href="https://www.linkedin.com/in/danij-fernandez">linkedin.com/in/danij-fernandez</a></p>
+						<p><a href="https://www.linkedin.com/in/danij-fernandez" target="_blank" rel="noopener noreferrer">linkedin.com/in/danij-fernandez</a></p>
 					</section>
 				</section>
 			</footer>
@@ -165,6 +165,7 @@
 
 	</body>
 </html>
+
 
 
 
