--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					<li><a href="projects.html">Projects</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://github.com/Dranter" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/Dranter" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/danij-fernandez" class="icon brands fa-linkedin" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 
@@ -57,7 +57,7 @@
 				<section class="posts">
 					<article>
 						<header>
-							<h2><a href="https://learn.microsoft.com/es-es/credentials/certifications/resources/study-guides/ai-102">Currently Working On</a></h2>
+							<h2><a href="https://learn.microsoft.com/es-es/credentials/certifications/resources/study-guides/ai-102" target="_blank" rel="noopener noreferrer">Currently Working On</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Reinforcement Learning" /></a>
 						<p>
@@ -70,7 +70,7 @@
 
 					<article>
 						<header>
-							<h2><a href="https://github.com/Dranter">AI Fish — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Virtual assistant AI project" /></a>
 						<p>Personal project exploring how language models can give a <strong>unique personality and adaptive behavior</strong> to a virtual assistant. Built in Python, this project combines conversational logic with experiments in emotional and contextual responses.</p>
@@ -118,11 +118,11 @@
 		</section>
 		<section>
 			<h3>GitHub</h3>
-			<p><a href="https://github.com/Dranter">github.com/Dranter</a></p>
+			<p><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">github.com/Dranter</a></p>
 		</section>
 		<section>
 			<h3>LinkedIn</h3>
-			<p><a href="https://www.linkedin.com/in/danij-fernandez">linkedin.com/in/danij-fernandez</a></p>
+			<p><a href="https://www.linkedin.com/in/danij-fernandez" target="_blank" rel="noopener noreferrer">linkedin.com/in/danij-fernandez</a></p>
 		</section>
 	</section>
 </footer>
@@ -164,6 +164,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
