--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<header>
 							<h2><a href="https://learn.microsoft.com/es-es/credentials/certifications/resources/study-guides/ai-102" target="_blank" rel="noopener noreferrer">Currently Working On</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic02.jpg" alt="Reinforcement Learning" /></a>
+						<a href="https://learn.microsoft.com/es-es/credentials/certifications/resources/study-guides/ai-102" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/ai102.jpg" alt="Reinforcement Learning" /></a>
 						<p>
 							🔹 Exploring the fundamentals of <strong>Reinforcement Learning</strong>.<br />
 							🔹 Developing personal projects with <strong>Python</strong> using libraries such as TensorFlow and OpenCV.<br />
@@ -164,6 +164,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
