--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<header>
 							<h2><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="Virtual assistant AI project" /></a>
+						<a href="https://github.com/Dranter" class="image fit"><img src="images/AIFish.jpg" alt="Virtual assistant AI project" /></a>
 						<p>Personal project exploring how language models can give a <strong>unique personality and adaptive behavior</strong> to a virtual assistant. Built in Python, this project combines conversational logic with experiments in emotional and contextual responses. It will be all inside a classic fish toy.</p>
 					</article>
 				</section>
@@ -164,6 +164,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
