--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 						<header>
 							<h2><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/pic03.jpg" alt="AI Fish Project" /></a>
+						<a href="#" class="image fit"><img src="images/AIFish.jpg" alt="AI Fish Project" /></a>
 						<p>
 							AI Fish is an experimental virtual assistant designed to explore how <strong>language models</strong> can express <strong>adaptive personalities</strong>.  
 							Built in <strong>Python</strong>, the project combines conversational logic with emotional responses and context awareness.  
@@ -165,6 +165,7 @@
 
 	</body>
 </html>
+
 
 
 
