--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 					<article>
 						<header>
-							<h2><a href="https://github.com/Dranter" target="_blank" rel="noopener noreferrer">AI Fish — A Virtual Assistant with Personality</a></h2>
+							<h2><a href="https://github.com/Dranter/Projects" target="_blank" rel="noopener noreferrer">AI Fish — A Virtual Assistant with Personality</a></h2>
 						</header>
 						<!--<a href="https://github.com/Dranter" class="image fit" target="_blank" rel="noopener noreferrer"><img src="images/AIFish.jpg" alt="Virtual assistant AI project" /></a>
 						-->
@@ -166,6 +166,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
