--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						My experience includes <strong>Python</strong> and <strong>Java</strong>, and I’m currently building personal projects to apply concepts from <strong>Machine Learning</strong> and explore how AI can integrate with robotics.<br />
 						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.</p>
 					</header>
-					<a href="#" class="image main"><img src="images/pic01.jpg" alt="AI or robotics concept" /></a>
+					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="AI or robotics concept" /></a>
 				</article>
 
 				<!-- Posts -->
@@ -176,6 +176,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
