--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 						<h2><a href="#">About Me</a></h2>
 						<p>I’m a developer passionate about <strong>Artificial Intelligence</strong>, with a solid <strong>programming and math</strong> background and a mindset focused on continuous learning.<br />
 						My experience includes <strong>Python</strong> and <strong>Java</strong>, and I’m currently building personal projects to apply concepts from <strong>Machine Learning</strong> and explore how AI can integrate with robotics.<br />
-						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.</p>
+						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.
+						My current certifications and achievements include:</p>
 					</header>
+					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="AI or robotics concept" /></a>
 					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="AI or robotics concept" /></a>
 				</article>
 
@@ -176,6 +178,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
