--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.
 						My current certifications and achievements include:</p>
 					</header>
-					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="AI or robotics concept" /></a>
-					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="AI or robotics concept" /></a>
+					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="Degree" /></a>
+					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="Certifications" /></a>
 				</article>
 
 				<!-- Posts -->
@@ -178,6 +178,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
