--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.
 						My current certifications and achievements include:</p>
 					</header>
-					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="Degree" /></a>
+					<a href="#" class="image main"><img src="images/tituloUniversitario2.jpg" alt="Degree" /></a>
 					<a href="#" class="image main"><img src="images/titulaciones.jpg" alt="Certifications" /></a>
 				</article>
 
@@ -171,6 +171,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
