--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<h2><a href="#">About Me</a></h2>
 						<p>I’m a developer passionate about <strong>Artificial Intelligence</strong>, with a solid <strong>programming and math</strong> background and a mindset focused on continuous learning.<br />
 						My experience includes <strong>Python</strong> and <strong>Java</strong>, and I’m currently building personal projects to apply concepts from <strong>Machine Learning</strong> and explore how AI can integrate with robotics.<br />
-						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.
+						My goal is to join a professional environment where I can grow, contribute, and help build intelligent systems that make an impact.<br />
 						My current certifications and achievements include:</p>
 					</header>
 					<a href="#" class="image main"><img src="images/tituloUniversitario2.jpg" alt="Degree" /></a>
@@ -171,6 +171,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
